server/etc/iptables/rules.v4
# Generated by iptables-save v1.6.0 on Sat Jul  7 07:51:38 2018
*filter
:INPUT DROP [14:2699]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [22:3152]
:DOCKER - [0:0]
:DOCKER-ISOLATION - [0:0]
-A INPUT -s 192.168.123.0/24 -p tcp -m tcp --sport 3551 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.123.0/24 -p udp -m udp --sport 3551 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.63.0/24 -p udp -m udp --sport 554 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.63.0/24 -p tcp -m tcp --sport 554 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -p tcp -j ACCEPT
-A INPUT -s 192.168.123.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -d 192.168.123.0/24 -p udp -m udp --sport 53 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -d 192.168.123.0/24 -p tcp -m tcp --sport 53 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -p icmp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -d 192.168.63.0/24 -p tcp -m tcp --sport 443 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -d 192.168.63.0/24 -p tcp -m tcp --sport 80 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -d 192.168.63.0/24 -p tcp -m tcp --sport 22 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.123.13/32 -p tcp -m tcp --sport 3551 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -d 172.17.0.0/16 -p tcp -j ACCEPT
-A INPUT -i enp1s0 -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -i enp1s0 -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -i enp1s0 -p tcp -m tcp --sport 443 -m state --state ESTABLISHED -j ACCEPT
-A INPUT -i enp1s0 -p tcp -m tcp --sport 80 -m state --state ESTABLISHED -j ACCEPT
-A FORWARD -j DOCKER-ISOLATION
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A OUTPUT -d 192.168.123.0/24 -p udp -m udp --dport 3551 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 192.168.123.0/24 -p tcp -m tcp --dport 3551 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 192.168.63.0/24 -p udp -m udp --dport 554 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 192.168.63.0/24 -p tcp -m tcp --dport 554 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 192.168.123.0/24 -p tcp -m tcp --sport 80 -j ACCEPT
-A OUTPUT -s 127.0.0.1/32 -d 127.0.0.1/32 -p tcp -j ACCEPT
-A OUTPUT -d 192.168.123.0/24 -p udp -m udp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 192.168.123.0/24 -p tcp -m tcp --dport 53 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p icmp -m state --state NEW,RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 192.168.123.13/32 -p tcp -m tcp --dport 3551 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -s 172.17.0.0/16 -p tcp -j ACCEPT
-A DOCKER-ISOLATION -j RETURN
COMMIT
# Completed on Sat Jul  7 07:51:38 2018
# Generated by iptables-save v1.6.0 on Sat Jul  7 07:51:38 2018
*nat
:PREROUTING ACCEPT [1497748:358455842]
:INPUT ACCEPT [127:8128]
:OUTPUT ACCEPT [241856:17773071]
:POSTROUTING ACCEPT [241856:17773071]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Sat Jul  7 07:51:38 2018
